syntax = "proto3";

option go_package = "app_onboarding/";

/* SearchRequest represents a search query, with pagination options to
 * indicate which results to include in the response. 
 * Hint use https://regex-golang.appspot.com/assets/html/index.html for
 *  Regex validation in Go
 */

message AppOnboardingRequest {
  string company_name = 1 ;
  string email_id= 2;
  string application_name = 3;  // Which page number do we want?
  string application_description = 4;  // Number of results to return per page.
}

/** SearchResponse represents the response of the Search
*/
message AppOnboardingResponse{
    string app_response = 1; // the search response
    int32 company_id = 2; // the page number
    string timestamp = 3; //total number of pages 

}

/** This is a test search service
*/
service AppOnboardingService {
  // Method to Search a test service
  rpc OnBoardApp (AppOnboardingRequest) returns (AppOnboardingResponse) {}
}
